# dry-handlebars

./: Cargo.toml  README.md
.github/workflows/: ci.yml
dry-handlebars/: Cargo.toml
dry-handlebars-macros/: Cargo.toml
dry-handlebars-macros/src/: lib.rs
dry-handlebars-macros/src/hbs/: block.rs  build_helper.rs  compiler.rs  error.rs  expression.rs  expression_tokenizer.rs  lib.rs  mod.rs
dry-handlebars-macros/src/parser/: block.rs  compiler.rs  error.rs  expression.rs  expression_tokenizer.rs  lib.rs  mod.rs
dry-handlebars/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs  test.rs
example/template/: TodoEdit2.hbs  button2.hbs
example/templates/: StructMembers.hbs
reference-ts/: package.json  tsconfig.json
reference-ts/tests/: handlebars.test.ts
