[package]
name = "dry-handlebars-macros"
version = "0.1.0"
edition = "2024"
authors = ["Paul Tuckey"]
description = "Procedural macros for the `dry-handlebars` crate"
license = "MIT"
repository = "https://github.com/paultuckey/dry-handlebars"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
walkdir = "2.5"
regex = "1.12"
proc-macro2 = "1.0.103"
