[package]
name = "dry-handlebars"
version = "0.1.0"
edition = "2024"
authors = ["Paul Tuckey"]
description = "Compile-time checked Handlebars templates for Rust"
license = "MIT"
repository = "https://github.com/paultuckey/dry-handlebars"

[dependencies]
dry-handlebars-macros = { path = "../dry-handlebars-macros", version = "0.1.0" }
